--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3,3 +3,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#play-slider::range-track{
+  background: #DAE1E7;
+  height: 1.5rem;
+  appearance: none;
+  border-radius: 9999px;
+}
+
+#play-slider::range-thumb {
+  background: black;
+  outline: none;
+  border: 0;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 9999px;
+  -webkit-appearance: none;
+}
